Metastrip bug #48649

Closed
opened 2016-06-14 01:28:11 +02:00 by Carlo Andreacchio · 5 comments

System Information
Windows 7 x64 gtx580

Blender Version
Broken: 9c60043

Short description of error
When moving metastrips, sometimes they get messed up in certain situations

Exact steps for others to reproduce the error
Open attached blend file

move the metastrip so it overlaps the color block,

look in the metastrip and notice how all the strip orders are all messed up compared to before

undo until before the move

move so it doesnt overlap the colour block

notice how it is fine.

metaStripBug.blend

**System Information** Windows 7 x64 gtx580 **Blender Version** Broken: 9c60043 **Short description of error** When moving metastrips, sometimes they get messed up in certain situations **Exact steps for others to reproduce the error** Open attached blend file move the metastrip so it overlaps the color block, look in the metastrip and notice how all the strip orders are all messed up compared to before undo until before the move move so it doesnt overlap the colour block notice how it is fine. [metaStripBug.blend](https://archive.blender.org/developer/F317073/metaStripBug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

I should clarify... the move so it overlaps i mean that it has a red outline and snaps back so that they are no longer overlapping... rather than moving it on the x-axis only

I should clarify... the move so it overlaps i mean that it has a red outline and snaps back so that they are no longer overlapping... rather than moving it on the x-axis only
Campbell Barton self-assigned this 2016-06-14 13:20:54 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 424f41ad1c

This issue was referenced by 424f41ad1c9f42cf274a8255d36f999994a99759
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48649
No description provided.