Fix T48649: VSE meta-strip overlap shuffles recursively